// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupCount should render default element 1`] = `
<div
  className="popup-count"
/>
`;

exports[`PopupCount should render prop data 1`] = `
<div
  className="popup-count"
>
  1
</div>
`;
